...
          alignItems: "center",
        }}
      >
        {isLoggedIn ? (
          // LOGOUT
          <TouchableOpacity
            testID="drawer_logout_btn"
            accessibilityLabel="drawer_logout_btn"
            style={{
              flexDirection: "row",
              alignItems: "center",
              paddingVertical: 10,
              marginBottom: 10,
...
              {t("drawer.logout")}
            </TextComponent>
          </TouchableOpacity>
        ) : (
          // LOGIN
          <TouchableOpacity
            testID="drawer_login_btn"
            accessibilityLabel="drawer_login_btn"
            style={{
              flexDirection: "row",
              alignItems: "center",
              paddingVertical: 10,
            }}
...
