...
          }}
          style={[
            styles.pageButton,
            { backgroundColor: currentPage >= totalPages ? "#ddd" : "#b97f28" },
          ]}
        >
          <TextComponent type="headerText" style={styles.pageButtonText}>Next</TextComponent>
        </TouchableOpacity>
      </View>
      </>
}
<LoadingOverlay visible={loading} text="Loading videos..." />
      {/* {loading && (
...
